--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css">
 </head>
 <body>
     <div class="wrapper">
         <ul class="gallery"></ul>
     </div>
     <script src="js/gallery.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.1.1/dist/basicLightbox.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
 </body>
 </html>
